INCLUDE_DIRECTORIES(
	${BULLET_PHYSICS_SOURCE_DIR}/src
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/BatchConstraintSolver/Shared
	${NVIDIA_OPENCL_BASE_DIR}/include
)

SET(BatchConstraintSolver_SRCS
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared/btOclCommon.cpp
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/BatchConstraintSolver/Shared/btBatchConstraintSolverOCL.cpp
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/BatchConstraintSolver/Shared/btBatchConstraintSolverOCL.cl
)

SET(BatchConstraintSolver_HDRS
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared/btOclCommon.h
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/BatchConstraintSolver/Shared/btBatchConstraintSolverOCL.h
)

ADD_LIBRARY(BatchConstraintSolverOCL_Nv ${BatchConstraintSolver_SRCS} ${BatchConstraintSolver_HDRS})
SET_TARGET_PROPERTIES(BatchConstraintSolverOCL_Nv PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(BatchConstraintSolverOCL_Nv PROPERTIES SOVERSION ${BULLET_VERSION})

IF (INSTALL_LIBS)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		#FILES_MATCHING requires CMake 2.6
		IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
			IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS BatchConstraintSolverOCL_Nv DESTINATION .)
			ELSE (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS BatchConstraintSolverOCL_Nv DESTINATION lib${LIB_SUFFIX})
				INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.h")
			ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
		ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)

		IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			SET_TARGET_PROPERTIES(BatchConstraintSolverOCL_Nv PROPERTIES FRAMEWORK true)
			SET_TARGET_PROPERTIES(BatchConstraintSolverOCL_Nv PROPERTIES PUBLIC_HEADER ${BatchConstraintSolver_HDRS})
		ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
	ENDIF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
ENDIF (INSTALL_LIBS)

