INCLUDE_DIRECTORIES(
	${BULLET_PHYSICS_SOURCE_DIR}/src
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Hier3dGridBroadphase/Shared
)

SET(Hier3dGridBroadphaseOCL_SRCS
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared/btOclCommon.cpp
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Hier3dGridBroadphase/Shared/btHier3dGridBroadphaseOCL.cpp
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Hier3dGridBroadphase/Shared/btHier3dGridBroadphaseOCL.cl
	MiniCLTaskWrap.cpp
)

SET(Hier3dGridBroadphaseOCL_HDRS
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared/btOclCommon.h
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Hier3dGridBroadphase/Shared/btHier3dGridBroadphaseOCL.h
)

ADD_DEFINITIONS(-DUSE_MINICL)

ADD_LIBRARY(Hier3dGridBroadphaseOCL_Mini ${Hier3dGridBroadphaseOCL_SRCS} ${Hier3dGridBroadphaseOCL_HDRS})
SET_TARGET_PROPERTIES(Hier3dGridBroadphaseOCL_Mini PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(Hier3dGridBroadphaseOCL_Mini PROPERTIES SOVERSION ${BULLET_VERSION})

IF (INSTALL_LIBS)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		#FILES_MATCHING requires CMake 2.6
		IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
			IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS Hier3dGridBroadphaseOCL_Mini DESTINATION .)
			ELSE (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS Hier3dGridBroadphaseOCL_Mini DESTINATION lib${LIB_SUFFIX})
				INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.h")
			ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
		ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)

		IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			SET_TARGET_PROPERTIES(Hier3dGridBroadphaseOCL_Mini PROPERTIES FRAMEWORK true)
			SET_TARGET_PROPERTIES(Hier3dGridBroadphaseOCL_Mini PROPERTIES PUBLIC_HEADER ${Hier3dGridBroadphaseOCL_HDRS})
		ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
	ENDIF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
ENDIF (INSTALL_LIBS)

